# inkwell-cli

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PHASE_2_PR_SUMMARY.md  PR_SUMMARY.md  README.md  SECURITY.md  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  tmp-pr-summary.md
.claude/: settings.json
.claude/hooks/: final-check.sh  install-git-hooks.sh  pre-push-check.sh  setup.sh  validate-python.sh
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml  obra-193-verification-v2.md  obra-193-verification.md  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  codex-review.yml  demo-deploy.yml  docs.yml  publish.yml  release.yml  security.yml
apps/web/: .env.example  README.md  package.json
benchmarks/: config_performance.py
docs/: USER_GUIDE.md  index.md  tutorial.md  user-guide.md
docs/_internal/: demo-runbook.md
docs/adr/: 000-template.md  001-developer-knowledge-system.md  002-phase-1-architecture.md  003-build-system-selection.md  004-credential-encryption.md  005-rss-parser-library.md  006-terminal-output-library.md  007-enforce-pre-commit-hooks.md  008-use-uv-for-python-tooling.md  027-retry-and-error-handling-strategy.md  README.md
docs/architecture/: phase-1-overview.md
docs/building-in-public/: index.md
docs/devlog/: 2025-11-06-phase-1-implementation-plan.md
docs/getting-started/: first-episode.md  index.md  installation.md  quickstart.md
docs/hooks/: fix_mermaid.py
docs/lessons/: 2025-11-10-phase-5-unit-3-wikilink-generation.md
docs/plans/: 2026-04-22-001-feat-youtube-url-ingestion-plan.md  2026-05-08-001-inkwell-web-app-plan.md
docs/reference/: agent-runtime.md  cache.md  cli-commands.md  config-options.md  index.md  machine-readable-output.md  supported-inputs.md  templates.md  transcription-attempt-policy.md  troubleshooting.md
docs/research/: README.md  agent-native-architecture-audit.md  mkdocs-material-setup.md
docs/user-guide/: configuration.md  extraction.md  feeds.md  index.md  local-claude-extraction.md  local-codex-extraction.md  processing.md
plans/: add-tutorial-template-for-step-by-step-extraction.md  enhance-list-command-resource-types.md  feat-agent-native-interview.md  feat-cli-add-podcast-name-flag-rename-output-to-output-dir.md  feat-list-latest-episodes.md  feat-plugin-architecture.md  fix-transcript-truncation-long-videos.md
sessions/: 2026-01-06_circular-import-fix-release.md  2026-01-06_phase-4-output-plugin-migration.md  2026-01-06_plugin-architecture-phase-2-extraction-migration.md  2026-01-06_plugin-architecture-phase-3-complete.md  2026-01-06_plugin-architecture-phase-3-transcription-migration.md  2026-01-06_plugin-architecture-phase-4-output-migration.md  2026-01-06_plugin-architecture-phase-5-complete.md  2026-01-06_plugin-architecture-phase-6-documentation.md  2026-01-06_plugin-architecture-phase1-implementation.md  2026-01-06_plugin-architecture-phase6-docs.md  2026-01-06_plugin-architecture-pr-review-merge.md  2026-01-06_plugin-cli-commands-implementation.md  2026-01-06_transcript-truncation-chunk-prompt-fix.md
src/inkwell/: __init__.py  cli.py  cli_list.py  cli_plugins.py
supabase/: config.toml
supabase/migrations/: 202605080001_inkwell_web_core.sql
supabase/templates/: magic_link.html
tests/: conftest.py
tests/e2e/: framework.py  smoke_claude_code_backend.py  smoke_codex_backend.py  test_full_pipeline.py
tests/fixtures/: youtube_channel_feed.xml
tests/integration/: test_cli.py  test_cli_list.py  test_cli_plugins.py  test_concurrent_config_operations.py
tests/unit/: test_batch_extraction.py  test_claude_code_engine_integration.py  test_claude_code_extractor.py  test_claude_extractor.py  test_codex_engine_integration.py  test_codex_extractor.py  test_config_manager.py  test_config_precedence.py  test_config_validation.py  test_crypto.py  test_extraction_cache.py  test_extraction_engine.py  test_feeds_parser.py  (+18 more)
todos/: 001-pending-p1-command-injection-editor-variable.md  004-pending-p1-fix-retry-timing-issues.md  005-pending-p1-add-file-locking-cost-tracking.md  007-pending-p1-add-fsync-atomic-writes.md  009-pending-p2-unsafe-json-deserialization-llm.md  010-pending-p2-redos-regex-patterns.md  012-pending-p3-remove-dead-code.md  014-pending-p3-batch-api-requests.md  015-pending-p3-async-file-io.md  016-pending-p3-fix-pre-existing-test-failures.md  017-pending-p3-implement-session-discovery.md  018-pending-p3-load-previous-interview-sessions.md  019-pending-p2-read-phase3-output-files.md  020-pending-p2-improve-extraction-error-handling.md  046-resolved-p0-fix-duplicate-dependency-declarations.md  047-resolved-p0-pin-github-actions-to-sha-hashes.md  048-resolved-p0-*.md  048-resolved-p0-secure-dockerfile-installation.md  049-resolved-p0-add-package-data-for-templates.md  050-resolved-p0-add-version-tag-validation.md  051-resolved-p0-add-missing-dependencies-pytest-cov-precommit.md  052-resolved-p0-pin-setup-python-action-to-sha.md  053-resolved-p1-fix-python-version-tomllib-incompatibility.md  054-resolved-p1-remove-redundant-linting-from-test-matrix.md  055-resolved-p1-enable-uv-dependency-caching.md  056-pending-p2-simplify-dockerfile-remove-over-engineering.md  057-pending-p2-standardize-python-versions-across-workflows.md  068-complete-p3-type-ignore-override-cache-classes.md  074-complete-p2-topological-sort-performance.md  074-ready-p2-topological-sort-performance.md  075-complete-p2-cache-get-enabled-results.md  075-ready-p2-cache-get-enabled-results.md  076-complete-p2-deduplicate-validate-json-output.md  076-ready-p2-deduplicate-validate-json-output.md  077-complete-p2-agent-native-plugin-persistence.md  077-ready-p2-agent-native-plugin-persistence.md  078-complete-p2-deduplicate-track-cost-method.md  078-ready-p2-deduplicate-track-cost-method.md  079-complete-p3-simplify-legacy-code-paths.md  079-ready-p3-simplify-legacy-code-paths.md  (+13 more)
workers/: __init__.py
(+267 files in other folders)
